--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "config": "^3.3.7",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-ejs": "^2.0.0",
     "express-session": "^1.17.3",
@@ -24,7 +25,7 @@
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "nodemon": "^2.0.19"
   }
 }
