--- a/package.json
+++ b/package.json
@@ -13,11 +13,8 @@
     "config": "^3.3.7",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.1",
-    "ejs": "^3.1.8",
-    "ejs-layouts": "^0.0.1",
     "express": "^4.18.1",
-    "express-ejs": "^2.0.0",
-    "express-ejs-layouts": "^2.5.1",
+    "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
